--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^0.28.7",
+    "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.4"
   },
