--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^0.28.7",
+    "csv-loader": "^2.1.1",
     "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.4"
+    "webpack": "^3.5.4",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.4"
